tests/baselines/reference/functionOverloads16.errors.txt
tests/cases/compiler/functionOverloads16.ts(1,1): error TS2463: Duplicate overload signature for foo.
tests/cases/compiler/functionOverloads16.ts(2,1): error TS2463: Duplicate overload signature for foo.


==== tests/cases/compiler/functionOverloads16.ts (2 errors) ====
    function foo(foo:{a:string;}):string;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo.
    function foo(foo:{a:string;}):number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo.
    function foo(foo:{a:string; b?:number;}):any { return "" }
    